# ChangeLog for dev-python/python-novaclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.13 2013/10/24 14:24:40 prometheanfire Exp $

*python-novaclient-2.15.0 (24 Oct 2013)

  24 Oct 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.15.0.ebuild:
  added testing to 2.15.0 takes forever, but works

*python-novaclient-2.14.1 (11 Aug 2013)

  11 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.14.1.ebuild, -python-novaclient-2.10.0-r1.ebuild,
  -python-novaclient-2.13.0.ebuild:
  updating python-novaclient

*python-novaclient-2.13.0-r1 (31 May 2013)

  31 May 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.13.0-r1.ebuild:
  updating python-keystoneclient deps to be fully distutils-r1 and update the
  requests dep to be more in line with reality

  03 May 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-novaclient-2.10.0-r1.ebuild, python-novaclient-2.11.1-r1.ebuild,
  python-novaclient-2.13.0.ebuild, python-novaclient-9999.ebuild:
  removing the non-existant python 2.5 support

*python-novaclient-2.13.0 (03 Apr 2013)

  03 Apr 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.13.0.ebuild:
  just a bump of python-novaclient to 2.13.0

*python-novaclient-2.11.1-r1 (20 Mar 2013)

  20 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  -python-novaclient-2.11.1.ebuild, +python-novaclient-2.11.1-r1.ebuild:
  revbump for bug 462248, also needed a newer version of requests...

*python-novaclient-2.11.1 (06 Mar 2013)

  06 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.11.1.ebuild:
  bumping python-novaclient to 2.11.1, still needs work on tests

  14 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  python-novaclient-2.10.0-r1.ebuild:
  should fix the unittest2 bug 450654

*python-novaclient-2.10.0-r1 (11 Jan 2013)
