@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-novaclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.13 2013/10/24 14:24:40 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.14 2013/11/26 11:00:52 idella4 Exp $
+
+  26 Nov 2013; Ian Delaney <idella4@gentoo.org> python-novaclient-2.15.0.ebuild,
+  python-novaclient-9999.ebuild:
+  re-invoked (unrestricted) & updated test phase
 
 *python-novaclient-2.15.0 (24 Oct 2013)
 
